feat: production deployment readiness